--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": ".",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "standard": "^11.0.0"
   }
 }
