--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "babel-preset-react": "^6.24.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.10.2",
-    "standard": "^11.0.0"
+    "prettier": "^1.10.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
