--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "homepage": ".",
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.1",
     "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-moment": "^0.7.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-tooltip": "^3.4.0"
   },
   "scripts": {
     "precommit": "lint-staged",
