--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.1",
+    "chartjs-plugin-deferred": "^1.0.0",
     "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.0",
