--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-moment": "^0.7.0",
+    "react-progress-bar.js": "^0.2.0-dev",
     "react-scripts": "1.1.1",
     "react-tooltip": "^3.4.0"
   },
