--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-burger-menu": "^2.3.0",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.3.1",
     "react-moment": "^0.7.0",
     "react-progress-bar.js": "^0.2.0-dev",
     "react-scripts": "1.1.1",
