Add - swagger API
- Initial project create using `swagger project create`

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,23 +2,29 @@
   "name": "spaghetti-back-end",
   "version": "1.0.0",
   "description": "Serves up API requests and mongoDB for moody spaghettinis",
-  "main": "server.js",
-  "scripts": {
-    "precommit": "lint-staged",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "private": true,
+  "keywords": [],
   "author": "CSC309 Group - Zach, Daniel, Calvin, Cody",
   "license": "ISC",
+  "main": "app.js",
   "dependencies": {
-    "express": "^4.16.3",
+    "express": "^4.12.3",
+    "swagger-express-mw": "^0.1.0",
     "mongodb": "^3.0.4"
   },
   "devDependencies": {
+    "should": "^7.1.0",
+    "supertest": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1"
   },
+  "scripts": {
+    "precommit": "lint-staged",
+    "start": "node app.js",
+    "test": "swagger project test"
+  },
   "lint-staged": {
-    "*.{js,jsx,json,css}": ["prettier --single-quote --write", "git add"]
+    "**/*.{js,json}": ["prettier --single-quote --write", "git add"]
   }
 }
