--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,11 +13,12 @@
     "mongodb": "^3.0.4"
   },
   "devDependencies": {
-    "should": "^7.1.0",
-    "supertest": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
-    "prettier": "^1.11.1"
+    "prettier": "^1.11.1",
+    "should": "^7.1.0",
+    "supertest": "^1.0.0",
+    "swagger-markdown": "^1.1.3"
   },
   "scripts": {
     "precommit": "lint-staged",
