--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.7.1",
     "chartjs-plugin-deferred": "^1.0.0",
     "moment": "^2.20.1",
+    "password-validator": "^4.0.0",
     "react": "^16.2.0",
     "react-burger-menu": "^2.3.0",
     "react-chartjs-2": "^2.7.0",
