Add - swagger dev dependency
- Contributors can simply run `swagger-project verify` now
- Added precommit doc generation

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,12 +18,14 @@
     "prettier": "^1.11.1",
     "should": "^7.1.0",
     "supertest": "^1.0.0",
+    "swagger": "^0.7.5",
     "swagger-markdown": "^1.1.3"
   },
   "scripts": {
-    "precommit": "lint-staged",
+    "precommit": "npm run md-docs && lint-staged",
     "start": "node app.js",
-    "test": "swagger project test"
+    "test": "swagger project test",
+    "md-docs": "swagger-markdown -i api/swagger/swagger.yaml -o README.md"
   },
   "lint-staged": {
     "**/*.{js,json}": ["prettier --single-quote --write", "git add"]
