--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.5",
     "express": "^4.12.3",
     "mongodb": "^3.6.1",
