--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,10 +8,10 @@
   "license": "ISC",
   "main": "app.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "express": "^4.12.3",
-    "mongodb": "^3.0.4",
-    "swagger-express-mw": "^0.1.0"
+    "mongodb": "^3.6.1",
+    "swagger-express-mw": "^0.7.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
@@ -29,7 +29,13 @@
     "md-docs": "swagger-markdown -i api/swagger/swagger.yaml -o README.md"
   },
   "lint-staged": {
-    "**/*.{js,json}": ["prettier --single-quote --write", "git add"],
-    "api/**/*.{js,json}": ["prettier --single-quote --write", "git add"]
+    "**/*.{js,json}": [
+      "prettier --single-quote --write",
+      "git add"
+    ],
+    "api/**/*.{js,json}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   }
 }
