--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,12 +9,12 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.12.3",
-    "swagger-express-mw": "^0.1.0",
-    "mongodb": "^3.0.4"
+    "mongodb": "^3.6.1",
+    "swagger-express-mw": "^0.7.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^7.0.5",
     "prettier": "^1.11.1",
     "should": "^7.1.0",
     "supertest": "^1.0.0",
