Apply the back-end changes of commit f8a145a to reproduce the evolution

--- a/back-end/api/swagger/open-api-v0.0.3.yaml
+++ b/back-end/api/swagger/open-api-v0.0.3.yaml
@@ -251,6 +251,12 @@ components:
         text:
           x-@id: evolvable:textToAnalyze
           type: string
+        username:
+          x-@id: evolvable:userName
+          type: string
+        password:
+          x-@id: evolvable:password
+          type: string
     entryAnalysis:
       required:
       - data
